# xlsx_writer

./: CHANGELOG.md  LICENSE  README.md  checksum-Elixir.XlsxWriter.RustXlsxWriter.exs  mix.exs
.github/workflows/: release.yml
examples/: comprehensive_demo.exs
guides/: formatting.md  getting_started.md  layout_features.md
lib/: xlsx_writer.ex
lib/xlsx_writer/: rust_xlsx_writer.ex  workbook_properties.ex
native/xlsx_writer/: Cargo.toml
native/xlsx_writer/src/: lib.rs
test/: xlsx_writer_test.exs
