[package]
name = "xlsx_writer"
version = "0.9.0"
authors = []
edition = "2021"

[lib]
name = "xlsx_writer"
crate-type = ["cdylib"]

[dependencies]
rustler = "0.38.0"
rust_xlsxwriter = "0.95.0"

[features]
default = ["nif_version_2_15"]
nif_version_2_15 = ["rustler/nif_version_2_15"]
nif_version_2_16 = ["rustler/nif_version_2_16"]
